# libnfc-jni-cmake

./: .gitignore  CMakeLists.txt  build.sh
